updated site structure and added information

--- a/index.html
+++ b/index.html
@@ -29,10 +29,79 @@
     <div class="intro_inner">
       <h1 class="intro_suptitle">Creative template</h1>
       <h1 class="intro_title">Welcome to MoGo</h1>
+      <a class="button" href="#">Learn more</a>
     </div>
+  </div>
+
+  <div class="slider">
+      <div class="container">
+        <div class="slider_inner">
+          <div class="slider_item">01 Intro</div>
+          <div class="slider_item">02 Work</div>
+          <div class="slider_item">03 About</div>
+          <div class="slider_item">04 Contacts</div>
+        </div>
+      </div>
   </div>
 </div>
 
+<section class="section">
+  <div class="container">
+
+    <div class="section_header">
+      <h3 class="section_suptitle">What we do</h3>
+      <h2 class="section_title">Story about us</h2>
+      <div class="section_text">
+        <p>The structure of the company needs to be constantly
+           changed in order for the structure to lead you forward.
+           About family business. My daughter and son work with me in business.
+           And I am convinced that family business plays a key role in family business.
+           If you want your family business to be successful, then family
+           relationships should be higher than money. And quality relationships
+           are a constant work, they need to be taken care of and invest
+          their own time and resources.</p>
+      </div>
+    </div>
+
+    <div class="about">
+      <div class="about_item">
+        <img src="css/image/item1.jpg" alt="">
+      </div>
+      <div class="about_item">
+        <img src="css/image/item2.jpg" alt="">
+      </div>
+      <div class="about_item">
+        <img src="css/image/item3.png" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="block">
+  <div class="block_inner">
+
+    <div class="block_item">
+      <div class="block_num">42</div>
+        Web design project
+    </div>
+    <div class="block_item">
+      <div class="block_num">123</div>
+        Happy client
+    </div>
+    <div class="block_item">
+      <div class="block_num">15</div>
+        Aword winner
+    </div>
+    <div class="block_item">
+      <div class="block_num">99</div>
+        Cup of coffee
+    </div>
+    <div class="block_item">
+      <div class="block_num">24</div>
+        Members
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
