added information about services

--- a/index.html
+++ b/index.html
@@ -103,5 +103,82 @@
   </div>
 </div>
 
+<div class="Services">
+  <div class="container">
+
+    <div class="Services_inner">
+      <h3 class="Services_suptitle">We work with</h3>
+      <h2 class="Services_title">Amazing Services</h2>
+    </div>
+
+      <div class="Services_block">
+      <div class="inner_item">
+        <div class="Services_item">
+          <img class="Services_icon" src="css/image/element1.jpg" alt="">
+          <div class="Services_text">Photography</div><br />
+          Photos get better and better.
+        </div>
+        <div class="Services_item">
+          <img class="Services_icon" src="css/image/element2.jpg" alt="">
+          <div class="Services_text">Web design</div><br />
+          Web design is growing every year.
+        </div>
+        <div class="Services_item">
+          <img class="Services_icon" src="css/image/element3.jpg" alt="">
+          <div class="Services_text">Creativity</div><br />
+          Сreativity also does not stand still.
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="inner_item">
+        <div class="Services_item">
+          <img class="Services_icon" src="css/image/element4.jpg" alt="">
+          <div class="Services_text">SEO</div><br />
+          Analysis of systems ranking algorithms.
+        </div>
+        <div class="Services_item">
+          <img class="Services_icon" src="css/image/element5.jpg" alt="">
+          <div class="Services_text">CSS/HTML</div><br />
+          Studying happens step by step.
+        </div>
+        <div class="Services_item">
+          <img class="Services_icon" src="css/image/element6.jpg" alt="">
+          <div class="Services_text">Digital</div><br />
+          Technology also does not stand still.
+        </div>
+      </div>
+      </div>
+  </div>
+</div>
+
+<section class="section">
+  <div class="container">
+
+    <div class="section_header">
+      <h3 class="section_suptitle">Service</h3>
+      <h2 class="section_title">What we do</h2>
+      <div class="section_text">
+        <p>The structure of the company needs to be constantly
+           changed in order for the structure to lead you forward.
+           About family business. My daughter and son work with me in business.
+           And I am convinced that family business plays a key role in family business.
+           If you want your family business to be successful, then family
+           relationships should be higher than money. And quality relationships
+           are a constant work, they need to be taken care of and invest
+          their own time and resources.</p>
+      </div>
+    </div>
+    <div class="wedo">
+      <div class="wedo_item">
+        <img src="css/image/item4.jpg" width="570" height="380" alt="">
+      </div>
+      <div class="wedo_item"></div>
+    </div>
+
+  </div>
+</section>
+
 </body>
 </html>
