service block updated

--- a/index.html
+++ b/index.html
@@ -174,7 +174,55 @@
       <div class="wedo_item">
         <img src="css/image/item4.jpg" width="570" height="380" alt="">
       </div>
-      <div class="wedo_item"></div>
+      <div class="wedo_item">
+        <div class="accordion">
+          <div class="accordion_item active">
+            <div class="accordion_header">
+              <img class="accordion_icon" src="css/image/element7.jpg" alt="">
+              <div class="accordion_title">Photography</div>
+            </div>
+            <div class="accordion_content">
+              <p>Photography technology is based on photography technology,
+                 which is considered one of the forms of fine art and occupies
+                 a key place in modern mass culture. The first sustainable
+                 photographic image was created in 1822 by the Frenchman
+                 Joseph Nisephor Niepce, but it has not
+                 survived to this day.</p>
+            </div>
+          </div>
+
+          <div class="accordion_item">
+            <div class="accordion_header">
+              <img class="accordion_icon" src="css/image/element7.jpg" alt="">
+              <div class="accordion_title">Creativity</div>
+            </div>
+            <div class="accordion_content">
+              <p>Photography technology is based on photography technology,
+                 which is considered one of the forms of fine art and occupies
+                 a key place in modern mass culture. The first sustainable
+                 photographic image was created in 1822 by the Frenchman
+                 Joseph Nisephor Niepce, but it has not
+                 survived to this day.</p>
+            </div>
+          </div>
+
+          <div class="accordion_item">
+            <div class="accordion_header">
+              <img class="accordion_icon" src="css/image/element7.jpg" alt="">
+              <div class="accordion_title">Web design</div>
+            </div>
+            <div class="accordion_content">
+              <p>Photography technology is based on photography technology,
+                 which is considered one of the forms of fine art and occupies
+                 a key place in modern mass culture. The first sustainable
+                 photographic image was created in 1822 by the Frenchman
+                 Joseph Nisephor Niepce, but it has not
+                 survived to this day.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
 
   </div>
