added block about command

--- a/index.html
+++ b/index.html
@@ -190,43 +190,70 @@
                  survived to this day.</p>
             </div>
           </div>
-
           <div class="accordion_item">
             <div class="accordion_header">
               <img class="accordion_icon" src="css/image/element7.jpg" alt="">
               <div class="accordion_title">Creativity</div>
             </div>
-            <div class="accordion_content">
-              <p>Photography technology is based on photography technology,
-                 which is considered one of the forms of fine art and occupies
-                 a key place in modern mass culture. The first sustainable
-                 photographic image was created in 1822 by the Frenchman
-                 Joseph Nisephor Niepce, but it has not
-                 survived to this day.</p>
-            </div>
           </div>
-
           <div class="accordion_item">
             <div class="accordion_header">
               <img class="accordion_icon" src="css/image/element7.jpg" alt="">
               <div class="accordion_title">Web design</div>
             </div>
-            <div class="accordion_content">
-              <p>Photography technology is based on photography technology,
-                 which is considered one of the forms of fine art and occupies
-                 a key place in modern mass culture. The first sustainable
-                 photographic image was created in 1822 by the Frenchman
-                 Joseph Nisephor Niepce, but it has not
-                 survived to this day.</p>
-            </div>
           </div>
-
         </div>
       </div>
     </div>
-
   </div>
 </section>
+
+  <div class="gray">
+    <div class="container">
+
+      <div class="gray_inner">
+            <div class="gray_item">
+                <img class="gray_img" src="css/image/element8.jpg" width="150px" height="150px" alt="">
+                <div class="gray_text">"Lorem ipsum dolor sit amet, consectetur adippiscing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magana aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation."</div>
+                <div class="gray_author">Jon Doe</div>
+            </div>
+      </div>
+    </div>
+  </div>
+
+<section class="section">
+  <div class="container">
+
+    <div class="section_header">
+      <h3 class="section_suptitle">Who we are</h3>
+      <h2 class="section_title">Meet our team</h2>
+      <div class="section_text">
+        <p>The structure of the company needs to be constantly
+           changed in order for the structure to lead you forward.
+           About family business. My daughter and son work with me in business.
+           And I am convinced that family business plays a key role in family business.
+           If you want your family business to be successful, then family
+           relationships should be higher than money. And quality relationships
+           are a constant work, they need to be taken care of and invest
+          their own time and resources.</p>
+      </div>
+    </div>
+
+    <div class="team">
+      <div class="team_item">
+        <img src="css/image/item5.jpg" width="390px" height="350px" alt="">
+      </div>
+      <div class="team_item">
+        <img src="css/image/item6.jpg" width="390px" height="350px" alt="">
+      </div>
+      <div class="teamt_item">
+        <img src="css/image/item7.jpg" width="390px" height="350px" alt="">
+      </div>
+    </div>
+  </div>00
+</div>
 
 </body>
 </html>
