--- a/index.html
+++ b/index.html
@@ -243,17 +243,86 @@
 
     <div class="team">
       <div class="team_item">
-        <img src="css/image/item5.jpg" width="390px" height="350px" alt="">
+          <div class="about_image">
+            <img src="css/image/item5.jpg" width="390px" height="350px" alt="">
+          </div>
       </div>
       <div class="team_item">
-        <img src="css/image/item6.jpg" width="390px" height="350px" alt="">
+          <div class="about_image">
+            <img src="css/image/item6.jpg" width="390px" height="350px" alt="">
+          </div>
       </div>
       <div class="teamt_item">
-        <img src="css/image/item7.jpg" width="390px" height="350px" alt="">
+          <div class="about_image">
+            <img src="css/image/item7.jpg" width="390px" height="350px" alt="">
+          </div>
       </div>
     </div>
-  </div>00
-</div>
+  </div>
+</section>
+
+  <div class="gray">
+    <div class="container">
+
+      <div class="gray_inner">
+          <div class="logo_item">
+            <img src="css/image/logo1.jpg"alt="">
+          </div>
+          <div class="logo_item">
+            <img src="css/image/logo2.jpg"alt="">
+          </div>
+          <div class="logo_item">
+            <img src="css/image/logo3.jpg"alt="">
+          </div>
+          <div class="logo_item">
+            <img src="css/image/logo4.jpg"alt="">
+          </div>
+          <div class="logo_item">
+            <img src="css/image/logo5.jpg"alt="">
+          </div>
+          <div class="logo_item">
+            <img src="css/image/logo6.jpg"alt="">
+          </div>
+      </div>
+    </div>
+  </div>
+
+<section class="section">
+  <div class="container">
+
+    <div class="section_header">
+      <h3 class="section_suptitle">What we do</h3>
+      <h2 class="section_title">Some of our work</h2>
+      <div class="section_text">
+        <p>The structure of the company needs to be constantly
+           changed in order for the structure to lead you forward.
+           About family business. My daughter and son work with me in business.
+           And I am convinced that family business plays a key role in family business.
+           If you want your family business to be successful, then family
+           relationships should be higher than money. And quality relationships
+           are a constant work, they need to be taken care of and invest
+          their own time and resources.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="works">
+    <div class="works_col">
+      <img src="css/image/image1.jpg" alt="">
+    </div>
+    <div class="works_col">
+      <img src="css/image/image2.jpg" height="747px" alt="">
+    </div>
+    <div class="works_col">
+      <img src="css/image/image3.jpg" height="747px" alt="">
+    </div>
+    <div class="works_col">
+      <img src="css/image/image4.jpg" height="747px" alt="">
+    </div>
+  </div>
+</section>
+
+
 
 </body>
 </html>
