added block footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap" rel="stylesheet">
     <title>site</title>
+    <script src="https://kit.fontawesome.com/103a2cf6bb.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -308,21 +309,88 @@
 
   <div class="works">
     <div class="works_col">
-      <img src="css/image/image1.jpg" alt="">
+      <div class="works_item">
+        <img class="works_image" src="css/image/image1.jpg" alt="">
+      </div>
     </div>
     <div class="works_col">
-      <img src="css/image/image2.jpg" height="747px" alt="">
+      <div class="works_item">
+        <img class="works_image" src="css/image/image2.jpg" alt="">
+      </div>
     </div>
     <div class="works_col">
-      <img src="css/image/image3.jpg" height="747px" alt="">
+      <div class="works_item">
+        <img class="works_image" src="css/image/image3.jpg" alt="">
+      </div>
     </div>
     <div class="works_col">
-      <img src="css/image/image4.jpg" height="747px" alt="">
+      <div class="works_item">
+        <img class="works_image" src="css/image/image4.jpg" alt="">
+      </div>
     </div>
   </div>
 </section>
 
+<footer class="footer">
+  <div class="container">
 
+    <div class="footer_inner">
+      <div class="footer_col">
+          <div class="footer_logo">MoGo</div>
+          <div class="footer_text">The structure of the company needs to be constantly
+           changed in order for the structure to lead you forward.
+           About family business. My daughter and son work with me in business.
+           And I am convinced that family business plays a key role in family business.
+           If you want your family business to be successful, then family
+           relationships should be higher than money. And quality relationships
+           are a constant work, they need to be taken care of and invest
+          their own time and resources.</div>
+
+          <div class="footer_social">
+              <div class="social_header">
+                <b>15K</b> followers
+              </div>
+              <div class="social_content">
+                Follow us:
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-pinterest-p"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-google-plus-g"></i>
+                </a>
+                <a href="#">
+                  <i class="fab fa-youtube"></i>
+                </a>
+                <a href="#">
+                  <i class="fas fa-basketball-ball"></i>
+                </a>
+              </div>
+          </div>
+
+          <form class="subscribe" action="/" method="post">
+            <input class="subscribe_input" type="email" name="name" placeholder="Your Email...">
+            <button class="subscribe_btn" type="submit">subscribe</button>
+          </form>
+      </div>
+
+      <div class="footer_blog">
+        <div class="blog_logo">Blogs</div>
+      </div>
+      <div class="footer_inst">
+        <div class="inst_logo">Instagram</div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
