--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="logo">MoGo</div>
 
       <nav class="nav">
-          <a class="nav_link" href="#">About</a>
-          <a class="nav_link" href="#">Service</a>
-          <a class="nav_link" href="#">Blog</a>
-          <a class="nav_link" href="#">Work</a>
-          <a class="nav_link" href="#">Contact</a>
+          <a class="nav_link" href="#A">About</a>
+          <a class="nav_link" href="#S">Service</a>
+          <a class="nav_link" href="#T">Team</a>
+          <a class="nav_link" href="#W">Work</a>
+          <a class="nav_link" href="#C">Contact</a>
       </nav>
     </div>
   </div>
@@ -50,7 +50,7 @@
   <div class="container">
 
     <div class="section_header">
-      <h3 class="section_suptitle">What we do</h3>
+      <h3 class="section_suptitle" id="A">What we do</h3>
       <h2 class="section_title">Story about us</h2>
       <div class="section_text">
         <p>The structure of the company needs to be constantly
@@ -108,7 +108,7 @@
   <div class="container">
 
     <div class="Services_inner">
-      <h3 class="Services_suptitle">We work with</h3>
+      <h3 class="Services_suptitle" id="S">We work with</h3>
       <h2 class="Services_title">Amazing Services</h2>
     </div>
 
@@ -228,7 +228,7 @@
   <div class="container">
 
     <div class="section_header">
-      <h3 class="section_suptitle">Who we are</h3>
+      <h3 class="section_suptitle" id="T">Who we are</h3>
       <h2 class="section_title">Meet our team</h2>
       <div class="section_text">
         <p>The structure of the company needs to be constantly
@@ -245,7 +245,7 @@
     <div class="team">
       <div class="team_item">
           <div class="about_image">
-            <img src="css/image/item5.jpg" width="390px" height="350px" alt="">
+            <img src="css/image/item5.png" alt="">
           </div>
       </div>
       <div class="team_item">
@@ -255,7 +255,7 @@
       </div>
       <div class="teamt_item">
           <div class="about_image">
-            <img src="css/image/item7.jpg" width="390px" height="350px" alt="">
+            <img src="css/image/item7.jpg" alt="">
           </div>
       </div>
     </div>
@@ -292,7 +292,7 @@
   <div class="container">
 
     <div class="section_header">
-      <h3 class="section_suptitle">What we do</h3>
+      <h3 class="section_suptitle" id="W">What we do</h3>
       <h2 class="section_title">Some of our work</h2>
       <div class="section_text">
         <p>The structure of the company needs to be constantly
@@ -331,7 +331,7 @@
   </div>
 </section>
 
-<footer class="footer">
+<footer class="footer" id="C">
   <div class="container">
 
     <div class="footer_inner">
@@ -340,11 +340,7 @@
           <div class="footer_text">The structure of the company needs to be constantly
            changed in order for the structure to lead you forward.
            About family business. My daughter and son work with me in business.
-           And I am convinced that family business plays a key role in family business.
-           If you want your family business to be successful, then family
-           relationships should be higher than money. And quality relationships
-           are a constant work, they need to be taken care of and invest
-          their own time and resources.</div>
+           And I am convinced that family business plays a key role in family business.</div>
 
           <div class="footer_social">
               <div class="social_header">
@@ -384,9 +380,33 @@
 
       <div class="footer_blog">
         <div class="blog_logo">Blogs</div>
+        <div class="blog_item">
+          <img src="css/image/blog1.png" alt="">
+          <div class="blog_content">
+            <a class="blog_text" href="#">Lorem ipum dolor sit amet</a>
+            <div class="blog_date">Jun 9 2016</div>
+          </div>
+        </div>
+        <div class="blog_item">
+          <img src="css/image/blog2.png" alt="">
+          <div class="blog_content">
+            <a class="blog_text" href="#">Sed dot tempor</a>
+            <div class="blog_date">Jun 9 2017</div>
+          </div>
+        </div>
+        <div class="blog_item">
+          <img src="css/image/blog3.png" alt="">
+          <div class="blog_content">
+            <a class="blog_text" href="#">Sed do eiusmod tempor</a>
+            <div class="blog_date">Jun 9 2018</div>
+          </div>
+        </div>
       </div>
+
       <div class="footer_inst">
-        <div class="inst_logo">Instagram</div>
+        <div class="blog_logo">Instagram</div>
+          <img src="css/image/inst1.png" width="264px" alt="">
+          <div class="inst_text">more photo</div>
       </div>
     </div>
   </div>
