work with adaptive layout

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=devise-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap" rel="stylesheet">
     <title>site</title>
@@ -37,10 +38,18 @@
   <div class="slider">
       <div class="container">
         <div class="slider_inner">
-          <div class="slider_item">01 Intro</div>
-          <div class="slider_item">02 Work</div>
-          <div class="slider_item">03 About</div>
-          <div class="slider_item">04 Contacts</div>
+          <div class="slider_item">01
+            <span class="slider_text">Intro</span>
+          </div>
+          <div class="slider_item">02
+            <span class="slider_text">Work</span>
+          </div>
+          <div class="slider_item">03
+            <span class="slider_text">About</span>
+          </div>
+          <div class="slider_item">04
+            <span class="slider_text">Contacts</span>
+          </div>
         </div>
       </div>
   </div>
@@ -66,13 +75,19 @@
 
     <div class="about">
       <div class="about_item">
-        <img src="css/image/item1.jpg" alt="">
+        <div class="card_inner">
+          <img class="card_img" src="css/image/item1.jpg" alt="">
+        </div>
       </div>
       <div class="about_item">
-        <img src="css/image/item2.jpg" alt="">
+        <div class="card_inner">
+          <img class="card_img" src="css/image/item2.jpg" alt="">
+        </div>
       </div>
       <div class="about_item">
-        <img src="css/image/item3.png" alt="">
+        <div class="card_inner">
+          <img class="card_img" src="css/image/item3.png" alt="">
+        </div>
       </div>
     </div>
   </div>
@@ -113,43 +128,38 @@
     </div>
 
       <div class="Services_block">
-      <div class="inner_item">
-        <div class="Services_item">
-          <img class="Services_icon" src="css/image/element1.jpg" alt="">
-          <div class="Services_text">Photography</div><br />
-          Photos get better and better.
+        <div class="inner_item">
+          <div class="Services_item">
+            <img class="Services_icon" src="css/image/element1.jpg" alt="">
+            <div class="Services_text">Photography</div><br />
+            Photos get better and better.
+          </div>
+          <div class="Services_item">
+            <img class="Services_icon" src="css/image/element2.jpg" alt="">
+            <div class="Services_text">Web design</div><br />
+            Web design is growing every year.
+          </div>
+          <div class="Services_item">
+            <img class="Services_icon" src="css/image/element3.jpg" alt="">
+            <div class="Services_text">Creativity</div><br />
+            Сreativity also does not stand still.
+          </div>
+          <div class="Services_item">
+            <img class="Services_icon" src="css/image/element4.jpg" alt="">
+            <div class="Services_text">SEO</div><br />
+            Analysis of systems ranking algorithms.
+          </div>
+          <div class="Services_item">
+            <img class="Services_icon" src="css/image/element5.jpg" alt="">
+            <div class="Services_text">CSS/HTML</div><br />
+            Studying happens step by step.
+          </div>
+          <div class="Services_item">
+            <img class="Services_icon" src="css/image/element6.jpg" alt="">
+            <div class="Services_text">Digital</div><br />
+            Technology also does not stand still.
+          </div>
         </div>
-        <div class="Services_item">
-          <img class="Services_icon" src="css/image/element2.jpg" alt="">
-          <div class="Services_text">Web design</div><br />
-          Web design is growing every year.
-        </div>
-        <div class="Services_item">
-          <img class="Services_icon" src="css/image/element3.jpg" alt="">
-          <div class="Services_text">Creativity</div><br />
-          Сreativity also does not stand still.
-        </div>
-      </div>
-
-      <hr>
-
-      <div class="inner_item">
-        <div class="Services_item">
-          <img class="Services_icon" src="css/image/element4.jpg" alt="">
-          <div class="Services_text">SEO</div><br />
-          Analysis of systems ranking algorithms.
-        </div>
-        <div class="Services_item">
-          <img class="Services_icon" src="css/image/element5.jpg" alt="">
-          <div class="Services_text">CSS/HTML</div><br />
-          Studying happens step by step.
-        </div>
-        <div class="Services_item">
-          <img class="Services_icon" src="css/image/element6.jpg" alt="">
-          <div class="Services_text">Digital</div><br />
-          Technology also does not stand still.
-        </div>
-      </div>
       </div>
   </div>
 </div>
