work with adaptive layout

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
     <div class="wedo">
       <div class="wedo_item">
-        <img src="css/image/item4.jpg" width="570" height="380" alt="">
+        <img class="wedo_img" src="css/image/item4.jpg" alt="">
       </div>
       <div class="wedo_item">
         <div class="accordion">
@@ -224,7 +224,7 @@
 
       <div class="gray_inner">
             <div class="gray_item">
-                <img class="gray_img" src="css/image/element8.jpg" width="150px" height="150px" alt="">
+                  <img class="gray_img" src="css/image/element8.jpg" width="150px" height="150px" alt="">
                 <div class="gray_text">"Lorem ipsum dolor sit amet, consectetur adippiscing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magana aliqua.
                   Ut enim ad minim veniam, quis nostrud exercitation."</div>
@@ -255,17 +255,17 @@
     <div class="team">
       <div class="team_item">
           <div class="about_image">
-            <img src="css/image/item5.png" alt="">
+            <img class="about_team" src="css/image/item5.png" alt="">
           </div>
       </div>
       <div class="team_item">
           <div class="about_image">
-            <img src="css/image/item6.jpg" width="390px" height="350px" alt="">
+            <img class="about_team" src="css/image/item6.jpg" alt="">
           </div>
       </div>
-      <div class="teamt_item">
+      <div class="team_item">
           <div class="about_image">
-            <img src="css/image/item7.jpg" alt="">
+            <img class="about_team" src="css/image/item7.jpg" alt="">
           </div>
       </div>
     </div>
