work with adaptive layout

--- a/index.html
+++ b/index.html
@@ -275,24 +275,24 @@
   <div class="gray">
     <div class="container">
 
-      <div class="gray_inner">
+      <div class="gray_logo">
           <div class="logo_item">
-            <img src="css/image/logo1.jpg"alt="">
+            <img class="logo_img" src="css/image/logo1.jpg"alt="">
           </div>
           <div class="logo_item">
-            <img src="css/image/logo2.jpg"alt="">
+            <img class="logo_img" src="css/image/logo2.jpg"alt="">
           </div>
           <div class="logo_item">
-            <img src="css/image/logo3.jpg"alt="">
+            <img class="logo_img" src="css/image/logo3.jpg"alt="">
           </div>
           <div class="logo_item">
-            <img src="css/image/logo4.jpg"alt="">
+            <img class="logo_img" src="css/image/logo4.jpg"alt="">
           </div>
           <div class="logo_item">
-            <img src="css/image/logo5.jpg"alt="">
+            <img class="logo_img" src="css/image/logo5.jpg"alt="">
           </div>
           <div class="logo_item">
-            <img src="css/image/logo6.jpg"alt="">
+            <img class="logo_img" src="css/image/logo6.jpg"alt="">
           </div>
       </div>
     </div>
