adaptation for footer made

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   </div>
 </section>
 
-  <div class="gray">
+  <div class="gray2">
     <div class="container">
 
       <div class="gray_logo">
@@ -415,7 +415,7 @@
 
       <div class="footer_inst">
         <div class="blog_logo">Instagram</div>
-          <img src="css/image/inst1.png" width="264px" alt="">
+          <img class="inst_img" src="css/image/inst1.png" alt="">
           <div class="inst_text">more photo</div>
       </div>
     </div>
