--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           <a class="nav_link" href="#W">Work</a>
           <a class="nav_link" href="#C">Contact</a>
       </nav>
+
+      <button class="nav_burger" type="button">
+        <span class="burger_item"></span>
+      </button>
     </div>
   </div>
 </header>
