--- a/Slider/slider.html
+++ b/Slider/slider.html
@@ -10,15 +10,15 @@
 	<div class="slideshow">
 
 		<div class="myslides">
-			<div class="numbertext">1/3</div>
+			<div class="numbertext"></div>
 			<img src="css/image/img1.jpg" width="100%" alt="">
 		</div>
 		<div class="myslides">
-			<div class="numbertext">2/3</div>
+			<div class="numbertext"></div>
 			<img src="css/image/img2.jpg" width="100%" alt="">
 		</div>
 		<div class="myslides">
-			<div class="numbertext">3/3</div>
+			<div class="numbertext"></div>
 			<img src="css/image/img3.jpg" width="100%" alt="">
 		</div>
 		<a class="prev">&#10095</a>
